[gd_scene load_steps=17 format=3 uid="uid://c6lrgtl1hkim3"]

[ext_resource type="Script" path="res://scenes/map_editor/story/triggers/listing.gd" id="1_f7b8g"]
[ext_resource type="PackedScene" uid="uid://bupvf7s6tx7c6" path="res://scenes/map_editor/story/triggers/trigger_list_element.tscn" id="2_b21n3"]
[ext_resource type="PackedScene" uid="uid://dq2plr1btsovc" path="res://scenes/map_editor/story/triggers/type_selector.tscn" id="3_wdi6x"]
[ext_resource type="Texture2D" uid="uid://cat1jloyg2wym" path="res://assets/gui/menu/buttons/buttonMed_brown.png" id="3_wqswl"]
[ext_resource type="Texture2D" uid="uid://bbdwp6f0d3nib" path="res://assets/gui/menu/buttons/buttonMed_brown_pressed.png" id="4_ef0i4"]
[ext_resource type="PackedScene" uid="uid://xo2i63jiantu" path="res://scenes/map_editor/story/triggers/types/assassination.tscn" id="4_ysdi4"]
[ext_resource type="PackedScene" uid="uid://cen55657i84ui" path="res://scenes/map_editor/story/triggers/types/attacked.tscn" id="5_gy06f"]
[ext_resource type="Texture2D" uid="uid://dk8ep1qsmga0q" path="res://assets/gui/menu/buttons/buttonMed_brown_hover.png" id="5_qiv3g"]
[ext_resource type="PackedScene" uid="uid://b7dectldayttw" path="res://scenes/map_editor/story/triggers/types/claim.tscn" id="6_2dktb"]
[ext_resource type="FontFile" uid="uid://btstgc45ggura" path="res://assets/fonts/courier.tres" id="6_wscrc"]
[ext_resource type="FontFile" uid="uid://dkpcsi5rudp7j" path="res://assets/fonts/ttf/courier.ttf" id="7_kvaju"]
[ext_resource type="PackedScene" uid="uid://buvo0ujvmmv0c" path="res://scenes/map_editor/story/triggers/types/decimate.tscn" id="7_lwhog"]
[ext_resource type="PackedScene" uid="uid://bf2wnxwm482ir" path="res://scenes/map_editor/story/triggers/types/deploy.tscn" id="8_80l8p"]
[ext_resource type="PackedScene" uid="uid://d1s0e8uya4j0a" path="res://scenes/map_editor/story/triggers/types/move.tscn" id="9_4m4cl"]
[ext_resource type="PackedScene" uid="uid://drumohl5fu3g7" path="res://scenes/map_editor/story/triggers/types/resources.tscn" id="10_ub6f8"]
[ext_resource type="PackedScene" uid="uid://w53igqpdbpat" path="res://scenes/map_editor/story/triggers/types/turn.tscn" id="11_epfcc"]

[node name="Listing" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f7b8g")

[node name="elements" type="VFlowContainer" parent="."]
layout_mode = 0
offset_right = 540.0
offset_bottom = 500.0

[node name="TriggerListElement0" parent="elements" instance=ExtResource("2_b21n3")]
layout_mode = 2

[node name="TriggerListElement1" parent="elements" instance=ExtResource("2_b21n3")]
layout_mode = 2

[node name="TriggerListElement2" parent="elements" instance=ExtResource("2_b21n3")]
layout_mode = 2

[node name="TriggerListElement3" parent="elements" instance=ExtResource("2_b21n3")]
layout_mode = 2

[node name="TriggerListElement4" parent="elements" instance=ExtResource("2_b21n3")]
layout_mode = 2

[node name="TriggerListElement5" parent="elements" instance=ExtResource("2_b21n3")]
layout_mode = 2

[node name="TriggerListElement6" parent="elements" instance=ExtResource("2_b21n3")]
layout_mode = 2

[node name="TriggerListElement7" parent="elements" instance=ExtResource("2_b21n3")]
layout_mode = 2

[node name="TriggerListElement8" parent="elements" instance=ExtResource("2_b21n3")]
layout_mode = 2

[node name="TriggerListElement9" parent="elements" instance=ExtResource("2_b21n3")]
layout_mode = 2

[node name="edit_panels" type="Control" parent="."]
anchors_preset = 0
offset_left = 600.0
offset_right = 1150.0
offset_bottom = 500.0

[node name="type_selector" parent="edit_panels" instance=ExtResource("3_wdi6x")]
visible = false
layout_mode = 1

[node name="assassination" parent="edit_panels" instance=ExtResource("4_ysdi4")]
visible = false
custom_minimum_size = Vector2(0, 0)
layout_mode = 1
offset_right = 0.0
offset_bottom = 0.0

[node name="attacked" parent="edit_panels" instance=ExtResource("5_gy06f")]
visible = false
layout_mode = 1
offset_right = 0.0
offset_bottom = 0.0

[node name="claim" parent="edit_panels" instance=ExtResource("6_2dktb")]
visible = false
layout_mode = 1
offset_right = 0.0
offset_bottom = 0.0

[node name="decimate" parent="edit_panels" instance=ExtResource("7_lwhog")]
visible = false
layout_mode = 1
offset_right = 0.0
offset_bottom = 0.0

[node name="deploy" parent="edit_panels" instance=ExtResource("8_80l8p")]
visible = false
layout_mode = 1
offset_right = 0.0
offset_bottom = 0.0

[node name="move" parent="edit_panels" instance=ExtResource("9_4m4cl")]
visible = false
layout_mode = 1
offset_right = 0.0
offset_bottom = 0.0

[node name="resources" parent="edit_panels" instance=ExtResource("10_ub6f8")]
visible = false
layout_mode = 1
offset_right = 0.0
offset_bottom = 0.0

[node name="turn" parent="edit_panels" instance=ExtResource("11_epfcc")]
visible = false
layout_mode = 1
offset_right = 0.0
offset_bottom = 0.0

[node name="list_prev" type="TextureButton" parent="."]
layout_mode = 0
offset_top = 510.0
offset_right = 190.0
offset_bottom = 550.0
focus_neighbor_right = NodePath("../list_next")
texture_normal = ExtResource("3_wqswl")
texture_pressed = ExtResource("4_ef0i4")
texture_hover = ExtResource("5_qiv3g")
texture_focused = ExtResource("5_qiv3g")

[node name="label" type="Label" parent="list_prev"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_wscrc")
text = "TR_PREV"
horizontal_alignment = 1
vertical_alignment = 1

[node name="list_next" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 350.0
offset_top = 510.0
offset_right = 540.0
offset_bottom = 550.0
focus_neighbor_left = NodePath("../list_prev")
texture_normal = ExtResource("3_wqswl")
texture_pressed = ExtResource("4_ef0i4")
texture_hover = ExtResource("5_qiv3g")
texture_focused = ExtResource("5_qiv3g")

[node name="label" type="Label" parent="list_next"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_wscrc")
text = "TR_NEXT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="new_trigger" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 600.0
offset_top = 510.0
offset_right = 1000.0
offset_bottom = 610.0

[node name="name" type="LineEdit" parent="new_trigger"]
layout_mode = 0
offset_right = 350.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("7_kvaju")
alignment = 1
max_length = 30

[node name="add_button" type="TextureButton" parent="new_trigger"]
layout_mode = 0
offset_left = 360.0
offset_right = 550.0
offset_bottom = 40.0
texture_normal = ExtResource("3_wqswl")
texture_pressed = ExtResource("4_ef0i4")
texture_hover = ExtResource("5_qiv3g")
texture_focused = ExtResource("5_qiv3g")

[node name="label" type="Label" parent="new_trigger/add_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_wscrc")
text = "TR_ADD"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="list_prev" to="." method="_on_list_prev_pressed"]
[connection signal="pressed" from="list_next" to="." method="_on_list_next_pressed"]
[connection signal="pressed" from="new_trigger/add_button" to="." method="_on_add_button_pressed"]
